# ignis

./: .gitignore  .gitmodules  LICENSE  README.md  config.py  dev.md  edu.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ai-bot.yml
assets/: issues.txt
assets/data/: cards-data.db  data.json  essence.xml  fetch-log.json  ignis-classes.json  ignis-features.json  ygordle-words-5L.txt
disc/: __main__.py  bot.py  config.py  discover.py  dyna.py  load.py  play.py  predict.py  resources.py  silence.py
disc/cogs/: __init__.py  discover.py  error.py  load.py  play.py  predict.py
discord/: bot.py  load.py
ignis/: __init__.py  ai.py  data_source.py  datasource.py  ignis.py
scripts/: __init__.py  ai.py  async-save-card-arts.py  async-save-cards-data.py  async-update-cards-data.py  count-feature-classes.py  display-stats.py  extract-card-art.py  load-card-art.py  load-cards-data.py  load-deck.py  refresh-database.py  save-cards-art-arrays.py  save-cards-art-images.py  save-cards-data.py  update-cards-data.py  update_cards_data.py
stats/: __init__.py  visual.py
tests/: card-art.py  fetch-data.py  find-ygp-url.py  load-data.py  manual.py  test-sql.py
tests/test-ignis/: test-datasource.py
tests/test_disc/: test_play.py
ygo/: __init__.py  api.py  deck.py  link.py  sql.py
ygo/classes/: __init__.py  art.py  card.py  monster.py  spelltrap.py
ygo/queries/: get-monsters.sql  refresh.sql  update-monsters.sql
ygo/sqla/: sql.py  test.py
ygo/sqla/classes/: __init__.py  card.py
ygo_api/: link.py
