[project]
name = "ignis"
description = "Various projects involving the Yu-Gi-Oh! card game, including asynchronous API requests, SQL database querying, machine learning, and a Discord bot!"
readme = "README.md"
authors = [{name = "Sup#2.0"}]
license = {file = "LICENSE"}
requires-python = ">= 3.12"
keywords = []

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
  "tests"
]
python_files = [
  "test-*.py",
]
